Additional fibad->hyrax clean up, mostly notebooks. Should rerun the notebooks later after the first renaming so that file paths say .../hyrax/...

--- a/docs/pre_executed/train_model.ipynb
+++ b/docs/pre_executed/train_model.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FIBAD Getting Started\n",
+    "# Hyrax Getting Started\n",
     "\n",
-    "In this getting started notebook we'll create an instance of a FIBAD object, train a builtin model on the CiFAR training dataset, and then use that trained model to run inference on the CiFAR testing dataset."
+    "In this getting started notebook we'll create an instance of a Hyrax object, train a builtin model on the CiFAR training dataset, and then use that trained model to run inference on the CiFAR testing dataset."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a FIBAD instance"
+    "## Create a Hyrax instance"
    ]
   },
   {
@@ -25,16 +25,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages/ignite/handlers/checkpoint.py:16: DeprecationWarning: `TorchScript` support for functional optimizers is deprecated and will be removed in a future PyTorch release. Consider using the `torch.compile` optimizer instead.\n",
-      "  from torch.distributed.optim import ZeroRedundancyOptimizer\n",
-      "[2025-02-04 12:58:33,912 fibad:INFO] Runtime Config read from: /home/drew/code/fibad/src/fibad/fibad_default_config.toml\n"
+      "[2025-03-26 14:46:50,459 hyrax:INFO] Runtime Config read from: /home/drew/code/fibad/src/hyrax/hyrax_default_config.toml\n"
      ]
     }
    ],
    "source": [
-    "import fibad\n",
+    "import hyrax\n",
     "\n",
-    "f = fibad.Fibad()"
+    "h = hyrax.Hyrax()"
    ]
   },
   {
@@ -50,15 +48,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.config[\"model\"][\"name\"] = \"ExampleAutoencoder\""
+    "h.config[\"model\"][\"name\"] = \"HyraxAutoencoder\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this demo, we'll make a few adjustments to the default configuration settings that the `fibad` object was instantiated with.\n",
-    "By accessing the `.config` attribute of the fibad instance, we can modify any configuration value.\n",
+    "For this demo, we'll make a few adjustments to the default configuration settings that the `hyrax` object was instantiated with.\n",
+    "By accessing the `.config` attribute of the hyrax instance, we can modify any configuration value.\n",
     "There are many configuration values that can be set, but here, we update only the model to train."
    ]
   },
@@ -75,6 +73,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages/ignite/handlers/checkpoint.py:16: DeprecationWarning: `TorchScript` support for functional optimizers is deprecated and will be removed in a future PyTorch release. Consider using the `torch.compile` optimizer instead.\n",
+      "  from torch.distributed.optim import ZeroRedundancyOptimizer\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -85,26 +91,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2025-02-04 12:58:34,729 fibad.models.model_registry:INFO] Using criterion: torch.nn.CrossEntropyLoss with default arguments.\n",
-      "2025-02-04 12:58:34,901 ignite.distributed.auto.auto_dataloader INFO: Use data loader kwargs for dataset 'Dataset CifarDataSet': \n",
-      "\t{'sampler': <torch.utils.data.sampler.SubsetRandomSampler object at 0x7f52c3b66e40>, 'batch_size': 512, 'num_workers': 2, 'pin_memory': True}\n",
-      "2025-02-04 12:58:34,902 ignite.distributed.auto.auto_dataloader INFO: Use data loader kwargs for dataset 'Dataset CifarDataSet': \n",
-      "\t{'sampler': <torch.utils.data.sampler.SubsetRandomSampler object at 0x7f528a178320>, 'batch_size': 512, 'num_workers': 2, 'pin_memory': True}\n",
+      "[2025-03-26 14:46:54,584 hyrax.models.model_registry:INFO] Using criterion: torch.nn.CrossEntropyLoss with default arguments.\n",
+      "2025-03-26 14:46:54,653 ignite.distributed.auto.auto_dataloader INFO: Use data loader kwargs for dataset 'Dataset HyraxCifarDa': \n",
+      "\t{'sampler': <torch.utils.data.sampler.SubsetRandomSampler object at 0x7f2095f60920>, 'batch_size': 512, 'pin_memory': True}\n",
+      "2025-03-26 14:46:54,655 ignite.distributed.auto.auto_dataloader INFO: Use data loader kwargs for dataset 'Dataset HyraxCifarDa': \n",
+      "\t{'sampler': <torch.utils.data.sampler.SubsetRandomSampler object at 0x7f2095f60980>, 'batch_size': 512, 'pin_memory': True}\n",
       "/home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages/ignite/handlers/tqdm_logger.py:127: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm\n",
-      "2025/02/04 12:58:35 INFO mlflow.system_metrics.system_metrics_monitor: Started monitoring system metrics.\n",
-      "[2025-02-04 12:58:35,289 fibad.pytorch_ignite:INFO] Training model on device: cuda\n"
+      "2025/03/26 14:46:54 INFO mlflow.system_metrics.system_metrics_monitor: Started monitoring system metrics.\n",
+      "[2025-03-26 14:46:54,902 hyrax.pytorch_ignite:INFO] Training model on device: cuda\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3bf1422ffb746d5bf76421a9e10c6a3",
+       "model_id": "1f78099ff2c542ca9035b20542ddfdb1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -113,12 +119,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67b529f4758d4583ba1c500e0870535e",
+       "model_id": "d9dfe21f63d54a52ac433e4c0dd585f7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -127,12 +133,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acb4d2c6202c4158b018871832a234f0",
+       "model_id": "7255c3a12e2e4722aa11b7c74edf095a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -141,12 +147,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c7fbbe16d06417b8057c93a4716b456",
+       "model_id": "0403a67fbb3040c898f3f99fbfc21b6a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -155,12 +161,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a6b695fb76342b59c0f4512a9464448",
+       "model_id": "9b37f565ffc343cc80a24ebcd5bfac77",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -169,12 +175,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5d2dcee259146e5af4c491cdb0ed62a",
+       "model_id": "99c55d57ea274a95bd7f9006e2f056c2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -183,12 +189,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3c8b03e9b7c430b8e12ab5470fbc727",
+       "model_id": "7ead518da40c4ee695364d7a842d0600",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -197,12 +203,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d6645aa80ea4be19990f17258781c6e",
+       "model_id": "39fadee1c9ff418e87fcfa4aea4d9cb6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -211,12 +217,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eebbf4c956fb4583b905276347170aef",
+       "model_id": "4a82d0db82f94f658ebd0a32208debea",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -225,12 +231,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a02aa1915554a059d60840c5f1d99aa",
+       "model_id": "0cb1e775a8174e2195876759e88a093e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  1%|1         | 1/79 [00:00<?, ?it/s]"
+       "  2%|1         | 1/59 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -240,17 +246,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2025-02-04 12:59:25,991 fibad.pytorch_ignite:INFO] Total training time: 50.70[s]\n",
-      "[2025-02-04 12:59:25,992 fibad.pytorch_ignite:INFO] Latest checkpoint saved as: /home/drew/code/fibad/docs/pre_executed/results/20250204-125833-train-ka1H/checkpoint_epoch_10.pt\n",
-      "[2025-02-04 12:59:25,992 fibad.pytorch_ignite:INFO] Best metric checkpoint saved as: /home/drew/code/fibad/docs/pre_executed/results/20250204-125833-train-ka1H/checkpoint_10_loss=-120.1850.pt\n",
-      "2025/02/04 12:59:26 INFO mlflow.system_metrics.system_metrics_monitor: Stopping system metrics monitoring...\n",
-      "2025/02/04 12:59:26 INFO mlflow.system_metrics.system_metrics_monitor: Successfully terminated system metrics monitoring!\n",
-      "[2025-02-04 12:59:26,028 fibad.train:INFO] Finished Training\n"
+      "[2025-03-26 14:48:23,891 hyrax.pytorch_ignite:INFO] Total training time: 88.99[s]\n",
+      "[2025-03-26 14:48:23,891 hyrax.pytorch_ignite:INFO] Latest checkpoint saved as: /home/drew/code/fibad/docs/pre_executed/results/20250326-144653-train-OgeH/checkpoint_epoch_10.pt\n",
+      "[2025-03-26 14:48:23,892 hyrax.pytorch_ignite:INFO] Best metric checkpoint saved as: /home/drew/code/fibad/docs/pre_executed/results/20250326-144653-train-OgeH/checkpoint_10_loss=-127.4221.pt\n",
+      "2025/03/26 14:48:23 INFO mlflow.system_metrics.system_metrics_monitor: Stopping system metrics monitoring...\n",
+      "2025/03/26 14:48:23 INFO mlflow.system_metrics.system_metrics_monitor: Successfully terminated system metrics monitoring!\n",
+      "[2025-03-26 14:48:23,903 hyrax.train:INFO] Finished Training\n",
+      "[2025-03-26 14:48:24,250 hyrax.model_exporters:INFO] Exported model to ONNX format: /home/drew/code/fibad/docs/pre_executed/results/20250326-144653-train-OgeH/example_model_opset_20.onnx\n"
      ]
     }
    ],
    "source": [
-    "f.train()"
+    "h.train()"
    ]
   },
   {
@@ -259,19 +266,19 @@
    "source": [
     "The output of the training will be stored in a time-stamped directory under the `./results/`.\n",
     "By default, a copy of the final configuration used in training is persisted as `runtime_config.toml`.\n",
-    "To run fibad again with the same configuration, you can reference this runtime_config.toml file.\n",
+    "To train again with the same configuration, you can reference this runtime_config.toml file.\n",
     "\n",
-    "If running in another notebook, instantiate a fibad object like so:\n",
+    "If running in another notebook, instantiate a hyrax object like so:\n",
     "```\n",
-    "new_fibad_instance = fibad.Fibad(config_file='./results/<timestamped_directory>/runtime_config.toml')\n",
+    "new_hyrax_instance = hyrax.Hyrax(config_file='./results/<timestamped_directory>/runtime_config.toml')\n",
     "```\n",
     "\n",
     "Or from the command line:\n",
     "```\n",
-    ">> fibad train --runtime-config ./results/<timestamped_directory>/runtime_config.toml\n",
+    ">> hyrax train --runtime-config ./results/<timestamped_directory>/runtime_config.toml\n",
     "```\n",
     "\n",
-    "Note here we're training on only a small handful of CiFAR data, but FIBAD has demonstrated that it can scale up to training sets with >1M samples."
+    "Note here we're training on only a small handful of CiFAR data, but Hyrax has demonstrated that it can scale up to training sets with >1M samples."
    ]
   },
   {
@@ -297,24 +304,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2025-02-04 12:59:26,734 fibad.models.model_registry:INFO] Using criterion: torch.nn.CrossEntropyLoss with default arguments.\n",
-      "[2025-02-04 12:59:26,736 fibad.infer:INFO] data set has length 50000\n",
-      "2025-02-04 12:59:26,736 ignite.distributed.auto.auto_dataloader INFO: Use data loader kwargs for dataset 'Dataset CifarDataSet': \n",
-      "\t{'sampler': None, 'batch_size': 128, 'num_workers': 2, 'pin_memory': True}\n",
-      "[2025-02-04 12:59:27,068 fibad.pytorch_ignite:INFO] Evaluating model on device: cuda\n",
-      "[2025-02-04 12:59:27,068 fibad.pytorch_ignite:INFO] Total epochs: 1\n",
-      "[2025-02-04 12:59:44,114 fibad.pytorch_ignite:INFO] Total evaluation time: 17.05[s]\n",
-      "[2025-02-04 12:59:44,164 fibad.infer:INFO] Inference results saved in: /home/drew/code/fibad/docs/pre_executed/results/20250204-125926-infer-xT9b\n"
+      "[2025-03-26 14:48:25,186 hyrax.models.model_registry:INFO] Using criterion: torch.nn.CrossEntropyLoss with default arguments.\n",
+      "[2025-03-26 14:48:25,187 hyrax.infer:INFO] data set has length 50000\n",
+      "2025-03-26 14:48:25,188 ignite.distributed.auto.auto_dataloader INFO: Use data loader kwargs for dataset 'Dataset HyraxCifarDa': \n",
+      "\t{'sampler': None, 'batch_size': 128, 'pin_memory': True}\n",
+      "[2025-03-26 14:48:25,715 hyrax.pytorch_ignite:INFO] Evaluating model on device: cuda\n",
+      "[2025-03-26 14:48:25,717 hyrax.pytorch_ignite:INFO] Total epochs: 1\n",
+      "[2025-03-26 14:48:51,778 hyrax.pytorch_ignite:INFO] Total evaluation time: 26.06[s]\n",
+      "[2025-03-26 14:48:51,848 hyrax.infer:INFO] Inference results saved in: /home/drew/code/fibad/docs/pre_executed/results/20250326-144824-infer-qr2F\n"
      ]
     }
    ],
    "source": [
-    "f.config[\"data_set\"][\"test_size\"] = 1.0\n",
-    "f.config[\"data_set\"][\"train_size\"] = 0.0\n",
-    "f.config[\"data_set\"][\"validate_size\"] = 0.0\n",
-    "f.config[\"data_loader\"][\"batch_size\"] = 128\n",
+    "h.config[\"data_set\"][\"test_size\"] = 1.0\n",
+    "h.config[\"data_set\"][\"train_size\"] = 0.0\n",
+    "h.config[\"data_set\"][\"validate_size\"] = 0.0\n",
+    "h.config[\"data_loader\"][\"batch_size\"] = 128\n",
     "\n",
-    "f.infer()"
+    "h.infer()"
    ]
   },
   {
@@ -323,11 +330,11 @@
    "source": [
     "Once a model has been trained, we can use the model weights file to run inference.\n",
     "By default running `infer` will look for the latest available model weights file.\n",
-    "A specific model weights file can be specified with `f.config['infer']['model_weights_file'] = <path_to_model_weights_file>`.\n",
+    "A specific model weights file can be specified with `h.config['infer']['model_weights_file'] = <path_to_model_weights_file>`.\n",
     "\n",
     "Here we'll make use of the last trained model weights file, and update the data set splits so that 100% of the data will be used for inference.\n",
     "\n",
-    "With the configuration updated, we can run inference by calling `f.infer()`.\n",
+    "With the configuration updated, we can run inference by calling `h.infer()`.\n",
     "\n",
     "The results of running inference are saved in the output directory noted in the last log line.\n",
     "The default output format is batched .npy files.\n",
