--- a/docs/pre_executed/custom_dataset.ipynb
+++ b/docs/pre_executed/custom_dataset.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
     "\n",
     "print(\"\\nMetadata field list:\")\n",
     "print(f\"dataset.metadata_fields() = {dataset.metadata_fields()}\")\n",
-    "print(f'Table(dataset.metadata([1,2], \"ra\")) =>')\n",
+    "print(f'Table(dataset.metadata([1, 3, 4], \"ra\")) =>')\n",
     "Table(dataset.metadata([1, 3, 4], [\"ra\"]))"
    ]
   },
